--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,6 @@
 }
 
 .princing-plan--starter {
-  justify-self: end;
   border: 2px solid #fdf2e9;
   padding: 4.6rem;
 }
@@ -576,4 +575,10 @@
 .footer-link:hover,
 .footer-link:active {
   color: #555;
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 600px) {
 }
